Registration: Fixing widths on all steps. Making button right-aligned. Styling Subscribe Pages step. Styling error handling. Styled scrollbar for webkit browsers.

--- a/app/stylesheets/layout/_about.sass
+++ b/app/stylesheets/layout/_about.sass
@@ -98,7 +98,8 @@
     float: left
 .registration 
   button 
-    width: 395px
+    //width: 395px
+    width: 100%
     padding: 10px 0
     margin-top: 5px
 .facebook
