--- a/app/stylesheets/layout/_tour.sass
+++ b/app/stylesheets/layout/_tour.sass
@@ -17,7 +17,7 @@
   display: none
   position: absolute
   z-index: 2000
-  height: auto !important
+  //height: auto !important
 
 .welcome
   width: 460px
@@ -208,7 +208,7 @@ p.welcome-divider
   margin-left: -1px
   li 
     display: inline-block
-    margin-right: 9px
+    margin-right: 8px
     &:last-child
       margin-right: 0px
     &:hover
@@ -234,7 +234,7 @@ p.welcome-divider
     display: inline-block
 
 #subscribe_pages ul.subscribe_pages li 
-  width: 210px
+  //width: 200px
   margin-right: 5px
   margin-left: 0px
   margin-bottom: 0px
@@ -263,8 +263,8 @@ p.welcome-divider
   
 #subscribe_pages ul.subscribe_pages li .description-container
   overflow: hidden
-  width: 165px
-  height: 65px
+  //width: 155px
+  max-height: 65px
 
 #subscribe_pages ul.subscribe_pages li.check
   input
@@ -450,8 +450,8 @@ div#find_button
     margin-bottom: 15px
   ol#rules
     float: left
-    width: 500px
-    margin-top: 10px
+    width: 400px
+    margin-top: 5px
     li
       float: left
       width: 100%
@@ -467,7 +467,7 @@ div#find_button
         width: 50px
       p
         float: right
-        width: 422px
+        width: 335px
       strong
         margin-right: 2px
         color: $blue
