--- a/app/stylesheets/modules/_tour.sass
+++ b/app/stylesheets/modules/_tour.sass
@@ -155,7 +155,7 @@ p.welcome-divider
     height: 45px
     line-height: 11px
   input
-    width: 377px
+    width: 382px
     border-radius: 4px
     margin-top: 0px
     margin-bottom: 15px
@@ -188,7 +188,7 @@ p.welcome-divider
   input.website
     float: left
   textarea
-    width: 377px
+    width: 382px
     height: 50px
     margin-top: 0px
     margin-bottom: 15px
@@ -481,22 +481,11 @@ p.welcome-divider
   text-shadow: 1px 1px 0px #fff
 
 #subscribe_pages
-  margin-right: auto
-  margin-left: auto
-  overflow: auto
-  overflow-x: hidden
-  background-color: rgba(0, 0, 0, 0.0125)
-  border: 1px solid #bbb
-  box-shadow: inset 0px 0px 3px 2px rgba(0,0,0,0.12), white 0px 1px 0px
-  padding: 0px 10px 10px 15px
-  border-radius: 4px
-  margin-bottom: 15px
-  div.page_category
-    margin-bottom: 0px
-  ul.subscribe_pages
-    margin-bottom: 0px
-    margin-right: 0px
-    display: inline-block
+  //background-color: rgba(0, 0, 0, 0.0125)
+  //border: 1px solid #bbb
+  //box-shadow: inset 0px 0px 3px 2px rgba(0,0,0,0.12), white 0px 1px 0px
+  //padding: 0px 10px 10px 15px
+  //border-radius: 4px
 
 #subscribe_pages ul.subscribe_pages li
   overflow: hidden
@@ -877,10 +866,7 @@ div#RealFindNeighbors div#find_bottom
   color: #131313 !important
   input::-webkit-input-placeholder, input:-moz-placeholder, input::-moz-placeholder
     color: #555 !important
-div#subscribe_pages ul.subscribe_pages div.page_item
-  float: left
 
-      
 /************* END OF IMPORTED STYLES ***********/  
 
 #civicProfile, #norms, #register, #findNeighbors
@@ -1143,11 +1129,11 @@ div#subscribe_pages ul.subscribe_pages div.page_item
   margin-right: 5px
 
 #norms, #register
-  font-size: 18px
+  font-size: 17px
   h2
     
   p
-    line-height: 22px
+    line-height: 20px
     text-shadow: 1px 1px 0px white
     a
       color: $red
@@ -1234,7 +1220,7 @@ div#subscribe_pages ul.subscribe_pages div.page_item
     padding: 8px
     border: 1px solid #C9C4B4
     box-shadow: inset #DDD 0px 0px 3px 2px, rgba(255, 255, 255, 1.0) 0px 1px 1px
-    width: 377px !important
+    width: 382px !important
     color: $black
     border-radius: 4px 0px 0px 4px
     span.dk_arrow.button.blue 
